--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "nr-stream>=1.1.5",
     "pyyaml>=6.0.1",
     "requests>=2.32.3",
-    "stablehash>=0.2.0",
+    "stablehash>=0.2.1,<0.3.0",
     "structured-templates>=0.0.6,<0.1.0",
     "typer>=0.12.3",
     "typing-extensions>=4.12.2",
