--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "pyyaml>=6.0.1",
     "requests>=2.32.3",
     "stablehash>=0.2.1,<0.3.0",
-    "structured-templates>=0.0.6,<0.1.0",
+    "structured-templates>=0.1.1",
     "typer>=0.12.3",
     "typing-extensions>=4.12.2",
 ]
