--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -20,32 +20,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      - name: Check Nix flake Nixpkgs inputs
+        uses: DeterminateSystems/flake-checker-action@main
+      - uses: cachix/install-nix-action@v25
         with:
-          python-version: "${{ matrix.python-version }}"
-
-      - name: Install Kraken-wrapper and UV
-        run: python -m pip install --upgrade pipx && pipx install kraken-wrapper && pipx install uv
-
-      - name: Cache Venv
-        uses: actions/cache@v4
+          nix_path: nixpkgs=channel:nixos-unstable
+      - uses: cachix/cachix-action@v14
         with:
-          path: .venv
-          key: ${{ runner.os }}-${{ hashFiles('uv.lock') }}-uv-${{ matrix.python-version }}
-
-      - name: Run ${{ matrix.step }}
-        run: krakenw run fmt lint
-
-      - name: Install the Kyverno CLI (required for some Nyl features)
-        uses: kyverno/action-install-cli@v0.2.0
-        with:
-          release: 'v1.13.0'
-
-      # TODO: Until krakenw run test works (currently fails because of doctest modules)
-      - name: Run tests
-        run: uv run pytest -vv
+          name: mycache
+          # If you chose signing key for write access
+          signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+          # If you chose API tokens for write access OR if you have a private cache
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+      - run: nix flake check
 
   publish:
     runs-on: ubuntu-latest
