add todo about python version in ci

--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -32,6 +32,8 @@ jobs:
           signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
           # If you chose API tokens for write access OR if you have a private cache
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
+      # TODO: How would I best pass the Python version to use for the test?
       - run: nix flake check
 
   publish:
