--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -7,9 +7,6 @@ on:
   pull_request:
     branches: [ develop ]
 
-env:
-  KRAKENW_USE: UV
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -58,13 +55,10 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install Kraken-wrapper
-        run: python -m pip install kraken-wrapper
-
-      - name: Build the package
-        run: krakenw run build
+      - name: Install uv
+        run: python -m pip install uv
 
       - name: Publish
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: build/python-dist/
+          packages-dir: dist/
