--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -55,8 +55,14 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Bump version
+        run: sed 's/version = "0.0.0"/version = "${{ github.ref_name }}"/' -i pyproject.toml && git diff
+
       - name: Install uv
         run: python -m pip install uv
+
+      - name: Build dist
+        run: uv build
 
       - name: Publish
         uses: pypa/gh-action-pypi-publish@release/v1
