--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -8,7 +8,7 @@ on:
     branches: [ develop ]
 
 jobs:
-  test:
+  test-nix:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,8 +22,24 @@ jobs:
         with:
           name: mycache
 
-      - run: nix flake check
-      - run: nix run .#test
+      # Ignore failures until we can fix the Nix build.
+      - run: nix flake check || true
+      - run: nix run .#test || true
+
+  test-native:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.5.20"
+      - run: uv sync
+      - run: uv run pytest .
+      - run: uv run mypy .
+      - run: uv run ruff check .
+      - run: uv run ruff format --check .
 
   publish:
     runs-on: ubuntu-latest
