--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -43,7 +43,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: test
+    needs: test-native
     environment: release
     permissions:
       id-token: write
