--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -31,6 +31,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Install Linuxbrew
+        run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+      - name: Install Prerequisites
+        run: brew install sops helm kyverno
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
