--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -73,7 +73,7 @@ jobs:
           python-version: "3.10"
 
       - name: Bump version
-        run: sed 's/version = "0.0.0"/version = "${{ github.ref_name }}"/' -i pyproject.toml && git diff
+        run: sed 's/version = ".*"/version = "${{ github.ref_name }}"/' -i pyproject.toml && git diff
 
       - name: Install uv
         run: python -m pip install uv
